--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><a href="./recipes/doro-wot.html">Doro Wot</a></li>
+            <li><a href="./recipes/fuul.html">Fuul</a></li>
+            <li><a href="./recipes/tibs.html">Tibs</a></li>
         </ul>
     </body>
 </html>
