--- a/recipes/tibs.html
+++ b/recipes/tibs.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes - Tibs</title>
 </head>
+
 <body>
     <h1>Tibs</h1>
+    <img src="../images/tibs.jpeg" alt="Image of Tibs">
+    <h2>Description</h2>
+    <p>The sauce in this dish gets its kick from berbere, an Ethiopian chile powder fragrant with cardamom, fenugreek,
+        and clove. Use it once and you'll see why a good chunk of Ethiopian cuisine is built on it.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>5 tablespoons niter kibbeh, or plain unsalted butter</li>
+        <li>2 medium onions, chopped medium (about 2 cups)</li>
+        <li>3-inch knob ginger, minced, about 2 tablespoons</li>
+        <li>6 medium cloves garlic, minced, about 2 tablespoons</li>
+        <li>2 tablespoons berbere (see note)</li>
+        <li>Kosher salt</li>
+        <li>1 pound beef sirloin, cut into 1-inch cubes, trimmed of excess
+            fat and connective tissue</li>
+        <li>1 teaspoon vegetable oil</li>
+        <li>1 teaspoon lemon juice, to taste</li>
+    </ul>
+    <h2>Instructions</h2>
+    <ol>
+        <li>Melt niter kibbeh or butter in a heavy saucepan on medium heat, then add onions, ginger, garlic, and
+            berbere. Reduce heat to medium-low and cook, stirring occasionally, until onions are dark, ruddy, and
+            golden, about 30 minutes. Onions should be at a low sizzle during cooking process. Adjust heat accordingly.
+            Transfer to food processor and blend until not quite a purée. Return to saucepan, season to taste with salt,
+            and keep warm.</li>
+        <li>Season beef on all sides generously with kosher salt. Heat oil in a 12-inch cast iron or stainless steel
+            skillet over high heat high until lightly smoking. Add beef in a single layer, leaving plenty of open space
+            in the pan (brown in batches if you don't have a large enough skillet). Cook without moving until
+            well-seared on one side, about 3 minutes. Flip meat cubes with tongs and cook on second side until well
+            seared. Continue to cook meat, stirring and flipping occasionally until desired level of doneness is
+            reached. For rare meat, transfer to saucepan immediately. For medium, cook an additional one to two minutes
+            before transferring to saucepan. For well done, cook up to five more minutes before transferring to
+            saucepan.</li>
+        <li>Toss beef with warm sauce, stir in lemon juice, and serve immediately.</li>
+    </ol>
 </body>
+
 </html>
