--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Odin Recipes</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/doro-wot.html">Doro Wot</a></li>
-            <li><a href="./recipes/fuul.html">Fuul</a></li>
-            <li><a href="./recipes/tibs.html">Tibs</a></li>
-        </ul>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <div><h1 class="title">Ethiopian Recipes</h1></div>
+
+    <div><button class="link"><a href="./recipes/doro-wot.html">Doro Wot</a></button></div>
+    <div><button class="link"><a href="./recipes/fuul.html">Fuul</a></button></div>
+    <div><button class="link"><a href="./recipes/tibs.html">Tibs</a></button></div>
+
+</body>
+
 </html>
