Finish adding CSS to homepage
For now... but I will be back dun dun dunnnn.

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 <body>
     <div><h1 class="title">Ethiopian Recipes</h1></div>
 
-    <div><button class="link"><a href="./recipes/doro-wot.html">Doro Wot</a></button></div>
-    <div><button class="link"><a href="./recipes/fuul.html">Fuul</a></button></div>
-    <div><button class="link"><a href="./recipes/tibs.html">Tibs</a></button></div>
-
+    <div><a href="./recipes/doro-wot.html"><button class="link button">Doro Wot</button></a></div>
+    <div><a href="./recipes/fuul.html"><button class="link button">Fuul</button></a></div>
+    <div><a href="./recipes/tibs.html"><button class="link button">Tibs</button></a></div>
 </body>
-
 </html>
