Add style to recipe pages
All 3 recipe pages have been linked to style.css.
Each has been styled similarly but different from
the homepage.

--- a/recipes/doro-wot.html
+++ b/recipes/doro-wot.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes - Doro Wot</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
+
 <body>
-    <h1>Doro Wot</h1>
+    <header>
+        <h1>Doro Wot</h1>
+    </header>
     <img src="../images/doro-wot.jpeg" alt="Image of Doro Wot">
     <h2>Description</h2>
-    <p>Doro Wat is one of the most famous of all African dishes.  
-     You will find it in every Ethiopian restaurant and virtually 
-     anyone who is familiar with African cuisine will have heard of it</p>
-     <p>Traditionally Doro Wat is served with an Ethiopian flatbread 
-        called injera.  It's kind of a spongy pancake made with teff 
-        flour (a grain indigenous to the area), and the batter is left 
-        to ferment for up to 4 days before its used.  The injera is 
-        used in place of an eating utensil and is used to scoop up 
-        the chicken stew.</p>
-        <p>The key to authentic, great-tasting Doro Wat is good quality, 
-            flavorful berbere, and a very long cooking process.  
-            It can take several hours for an Ethiopian to make Doro Wat.  
-            You can cut back on the cooking time and your Doro Wat will 
-            still taste good, but it won't taste like it's supposed to.  
-            The magic is in the slow-cooked onions.  And it takes time 
+    <div class="content">
+        <p>Doro Wot is one of the most famous of all African dishes.
+            You will find it in every Ethiopian restaurant and virtually
+            anyone who is familiar with African cuisine will have heard of it</p>
+        <p>Traditionally Doro Wot is served with an Ethiopian flatbread
+            called injera. It's kind of a spongy pancake made with teff
+            flour (a grain indigenous to the area), and the batter is left
+            to ferment for up to 4 days before its used. The injera is
+            used in place of an eating utensil and is used to scoop up
+            the chicken stew.</p>
+        <p>The key to authentic, great-tasting Doro Wot is good quality,
+            flavorful berbere, and a very long cooking process.
+            It can take several hours for an Ethiopian to make Doro Wot.
+            You can cut back on the cooking time and your Doro Wot will
+            still taste good, but it won't taste like it's supposed to.
+            The magic is in the slow-cooked onions. And it takes time
             for the magic to happen.</p>
+    </div>
 
-        <h2>Ingredients</h2>
+    <h2>Ingredients</h2>
+    <div class="content">
         <ul>
             <li>3 lbs chicken thighs</li>
             <li>2 tablespoons fresh lemon juice</li>
@@ -39,30 +47,37 @@
             <li>4 hard-boiled eggs</li>
             <li>1 cup chicken stock</li>
         </ul>
-        <h2>Instructions</h2>
+    </div>
+    <h2>Instructions</h2>
+    <div class="content">
         <ol>
-            <li>Place the chicken pieces in a bowl and pour lemon 
-                juice over. Let sit at room temperature for at least 
+            <li>Place the chicken pieces in a bowl and pour lemon
+                juice over. Let sit at room temperature for at least
                 30 minutes.</li>
             <li>Heat the niter kibbeh or butter along with the olive
-                 oil in a Dutch oven. Add the onions and saute, 
-                 covered, over low heat for 45 minutes, stirring 
-                 occasionally.</li>
+                oil in a Dutch oven. Add the onions and saute,
+                covered, over low heat for 45 minutes, stirring
+                occasionally.</li>
             <li>Add the berbere and the 2 remaining tablespoons
-                 of butter and saute, covered, over low heat 
-                 for another 30 minutes, stirring occasionally.</li>    
-            <li>Add the garlic, ginger, and 1 tablespoon butter 
-                and continue to saute, covered, for another 20 
+                of butter and saute, covered, over low heat
+                for another 30 minutes, stirring occasionally.</li>
+            <li>Add the garlic, ginger, and 1 tablespoon butter
+                and continue to saute, covered, for another 20
                 minutes, stirring occasionally.</li>
-            <li>Add the chicken, broth, salt and wine and bring 
-                to a boil. Reduce the heat to low, cover, and 
+            <li>Add the chicken, broth, salt and wine and bring
+                to a boil. Reduce the heat to low, cover, and
                 simmer for 45 minutes, stirring occasionally.</li>
-            <li>Adjust the seasonings, adding more berbere 
-                according to heat preference. Add the boiled eggs 
-                and simmer on low heat, covered, for another 15 
+            <li>Adjust the seasonings, adding more berbere
+                according to heat preference. Add the boiled eggs
+                and simmer on low heat, covered, for another 15
                 minutes.</li>
-            <li>Half or quarter the eggs and arrange on the plates 
+            <li>Half or quarter the eggs and arrange on the plates
                 with the stew. Serve hot with injera, bread or rice</li>
         </ol>
+    </div>
 </body>
+<footer>
+    <div><a href="../index.html"><button class="button futt">Return Home</button></a></div>
+</footer>
+
 </html>
