--- a/recipes/fuul.html
+++ b/recipes/fuul.html
@@ -4,60 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes - Fuul</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1>Fuul</h1>
+    <header>
+        <h1>Fuul</h1>
+
+    </header>
     <img src="../images/fuul.jpeg" alt="Image of Fuul">
     <h1>Description</h1>
-    <p>Fuul is a beloved fava bean stew that has long been
-        woven into the culinary fabric of East Africa, North
-        Africa and the Middle East. It's also known as
-        ful medames or foul mudammas</p>
-    <p>This comforting stew is served in a variety of ways:
-        slow-simmered whole beans topped with juicy tomatoes
-        and olive oil, or simply crushed and spritzed with
-        lemon juice. This recipe is for Somali-style fuul,
-        which consists of smashed fava beans and receives
-        its intoxicating smell from the xawaash mix.</p>
-    <p>Fuul is often eaten for breakfast alongside eggs and
-        fresh anjero</p>
+    <div class="content">
+        <p>Fuul is a beloved fava bean stew that has long been
+            woven into the culinary fabric of East Africa, North
+            Africa and the Middle East. It's also known as
+            ful medames or foul mudammas</p>
+        <p>This comforting stew is served in a variety of ways:
+            slow-simmered whole beans topped with juicy tomatoes
+            and olive oil, or simply crushed and spritzed with
+            lemon juice. This recipe is for Somali-style fuul,
+            which consists of smashed fava beans and receives
+            its intoxicating smell from the xawaash mix.</p>
+        <p>Fuul is often eaten for breakfast alongside eggs and
+            fresh anjero</p>
+    </div>
     <h1>Ingredients</h1>
-    <ul>
-        <li>2 tablespoons olive oil</li>
-        <li>1 medium onion, finely diced</li>
-        <li>5 garlic cloves, minced or crushed</li>
-        <li>4 large tomatoes, roughly chopped</li>
-        <li>1 teaspoon fine sea salt or to taste</li>
-        <li>4 teaspoons ground cumin</li>
-        <li>1 teaspoon ground coriander</li>
-        <li>½ teaspoon ground black pepper</li>
-        <li>⅛ teaspoon ground cinnamon</li>
-        <li>⅛ teaspoon ground cardamom</li>
-        <li>1 (14-ounce) can small fava beans, rinsed</li>
-        <li>¼ cup tomato sauce</li>
-        <li>1 handful cilantro leaves, washed and roughly chopped</li>
-        <li>Anjero or other flatbread, for serving (optional)</li>
-    </ul>
+    <div class="content">
+        <ul>
+            <li>2 tablespoons olive oil</li>
+            <li>1 medium onion, finely diced</li>
+            <li>5 garlic cloves, minced or crushed</li>
+            <li>4 large tomatoes, roughly chopped</li>
+            <li>1 teaspoon fine sea salt or to taste</li>
+            <li>4 teaspoons ground cumin</li>
+            <li>1 teaspoon ground coriander</li>
+            <li>½ teaspoon ground black pepper</li>
+            <li>⅛ teaspoon ground cinnamon</li>
+            <li>⅛ teaspoon ground cardamom</li>
+            <li>1 (14-ounce) can small fava beans, rinsed</li>
+            <li>¼ cup tomato sauce</li>
+            <li>1 handful cilantro leaves, washed and roughly chopped</li>
+            <li>Anjero or other flatbread, for serving (optional)</li>
+        </ul>
+    </div>
     <h2>Instructions</h2>
-    <ol>
-        <li>In a medium pot or deep skillet over medium heat, warm up the olive oil. Once the olive oil is hot, add the
-            onion and stir. Let the onions cook, stirring occasionally, until they are soft and almost translucent,
-            about 5 minutes.</li>
-        <li>Once the onions have cooked, add in the garlic and let it cook until it softens, about 2 minutes. Add the
-            roughly chopped tomatoes and let them cook, stirring occasionally, for 7 to 8 minutes or until they start to
-            break down. Add the salt.</li>
-        <li>While the tomato mixture cooks, prepare the xawaash mix: Add the cumin, coriander, black pepper, cinnamon
-            and cardamom to a small nonstick pan. Toast over low heat, stirring continuously, for 1 minute or until the
-            spice mix becomes fragrant.</li>
-        <li>Add the xawaash mix to the simmering tomato and onions. While the tomatoes finish cooking, add the rinsed
-            fava beans to a medium bowl and use a pestle to mash them until there are almost no whole beans left. Stir
-            the mashed beans into the tomatoes.</li>
-        <li>Stir in the tomato sauce, 1 cup of water and the chopped cilantro leaves into the bean and tomato mixture.
-            Cover the pan and simmer on low heat for 15 minutes. Stir in up to an additional ⅓ cup of water if the stew
-            gets too thick.</li>
-        <li>Serve the fuul with anjero, if desired. Leftovers keep for about a week in the refrigerator.</li>
-    </ol>
+    <div class="content">
+        <ol>
+            <li>In a medium pot or deep skillet over medium heat, warm up the olive oil. Once the olive oil is hot, add
+                the
+                onion and stir. Let the onions cook, stirring occasionally, until they are soft and almost translucent,
+                about 5 minutes.</li>
+            <li>Once the onions have cooked, add in the garlic and let it cook until it softens, about 2 minutes. Add
+                the
+                roughly chopped tomatoes and let them cook, stirring occasionally, for 7 to 8 minutes or until they
+                start to
+                break down. Add the salt.</li>
+            <li>While the tomato mixture cooks, prepare the xawaash mix: Add the cumin, coriander, black pepper,
+                cinnamon
+                and cardamom to a small nonstick pan. Toast over low heat, stirring continuously, for 1 minute or until
+                the
+                spice mix becomes fragrant.</li>
+            <li>Add the xawaash mix to the simmering tomato and onions. While the tomatoes finish cooking, add the
+                rinsed
+                fava beans to a medium bowl and use a pestle to mash them until there are almost no whole beans left.
+                Stir
+                the mashed beans into the tomatoes.</li>
+            <li>Stir in the tomato sauce, 1 cup of water and the chopped cilantro leaves into the bean and tomato
+                mixture.
+                Cover the pan and simmer on low heat for 15 minutes. Stir in up to an additional ⅓ cup of water if the
+                stew
+                gets too thick.</li>
+            <li>Serve the fuul with anjero, if desired. Leftovers keep for about a week in the refrigerator.</li>
+        </ol>
+    </div>
 </body>
+<footer>
+    <div><a href="../index.html"><button class="button futt">Return Home</button></a></div>
+</footer>
 
 </html>
