--- a/recipes/tibs.html
+++ b/recipes/tibs.html
@@ -4,28 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Odin Recipes - Tibs</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <h1>Tibs</h1>
+    <header>
+        <h1>Tibs</h1>
+    </header>
     <img src="../images/tibs.jpeg" alt="Image of Tibs">
     <h2>Description</h2>
+    <div class="content">
     <p>The sauce in this dish gets its kick from berbere, an Ethiopian chile powder fragrant with cardamom, fenugreek,
         and clove. Use it once and you'll see why a good chunk of Ethiopian cuisine is built on it.</p>
+        </div>
     <h2>Ingredients</h2>
-    <ul>
-        <li>5 tablespoons niter kibbeh, or plain unsalted butter</li>
-        <li>2 medium onions, chopped medium (about 2 cups)</li>
-        <li>3-inch knob ginger, minced, about 2 tablespoons</li>
-        <li>6 medium cloves garlic, minced, about 2 tablespoons</li>
-        <li>2 tablespoons berbere (see note)</li>
-        <li>Kosher salt</li>
-        <li>1 pound beef sirloin, cut into 1-inch cubes, trimmed of excess
-            fat and connective tissue</li>
-        <li>1 teaspoon vegetable oil</li>
-        <li>1 teaspoon lemon juice, to taste</li>
-    </ul>
+    <div class="content">
+        <ul>
+            <li>5 tablespoons niter kibbeh, or plain unsalted butter</li>
+            <li>2 medium onions, chopped medium (about 2 cups)</li>
+            <li>3-inch knob ginger, minced, about 2 tablespoons</li>
+            <li>6 medium cloves garlic, minced, about 2 tablespoons</li>
+            <li>2 tablespoons berbere (see note)</li>
+            <li>Kosher salt</li>
+            <li>1 pound beef sirloin, cut into 1-inch cubes, trimmed of excess
+                fat and connective tissue</li>
+            <li>1 teaspoon vegetable oil</li>
+            <li>1 teaspoon lemon juice, to taste</li>
+        </ul>
+    </div>
     <h2>Instructions</h2>
+    <div class="content">
     <ol>
         <li>Melt niter kibbeh or butter in a heavy saucepan on medium heat, then add onions, ginger, garlic, and
             berbere. Reduce heat to medium-low and cook, stirring occasionally, until onions are dark, ruddy, and
@@ -42,6 +50,10 @@
             saucepan.</li>
         <li>Toss beef with warm sauce, stir in lemon juice, and serve immediately.</li>
     </ol>
+    </div> 
 </body>
+<footer>
+    <div><a href="../index.html"><button class="button futt">Return Home</button></a></div>
+</footer>
 
 </html>
